[gd_scene load_steps=14 format=2]

[ext_resource path="res://necrosans/necrosans.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://TouchScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/Cadence/cadence_2.png" type="Texture" id=3]
[ext_resource path="res://assets/Cadence/cadence_0.png" type="Texture" id=4]
[ext_resource path="res://assets/Cadence/cadence_3.png" type="Texture" id=5]
[ext_resource path="res://assets/Cadence/cadence_1.png" type="Texture" id=6]
[ext_resource path="res://Record_Crypt.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 375, 667 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 1
outline_color = Color( 0, 0.0156863, 1, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Record_Crypt" type="Node2D"]
script = ExtResource( 7 )

[node name="TouchScreen" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchScreen"]
position = Vector2( 375, 667 )
shape = SubResource( 1 )

[node name="Label_Timer" type="Label" parent="."]
margin_top = 256.0
margin_right = 752.0
margin_bottom = 488.0
custom_fonts/font = SubResource( 2 )
text = "00:00.00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Post" type="Button" parent="Label_Timer"]
margin_left = 32.0
margin_top = 232.0
margin_right = 304.0
margin_bottom = 344.0
custom_fonts/font = SubResource( 3 )
disabled = true
text = "Post Result"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Discard" type="Button" parent="Label_Timer"]
margin_left = 408.0
margin_top = 232.0
margin_right = 720.0
margin_bottom = 344.0
custom_fonts/font = SubResource( 3 )
disabled = true
text = "Discard Result"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Seed" type="Label" parent="."]
margin_left = 480.0
margin_top = 64.0
margin_right = 700.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 4 )
text = "Seeded run
123456"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Settings" type="Label" parent="."]
visible = false
margin_top = 680.0
margin_right = 752.0
margin_bottom = 1224.0
custom_fonts/font = SubResource( 5 )
text = "division : Enabled

z2 -  00:00.00
z3 -  00:00.00
z4 -  00:00.00
z5 -  00:00.00
DR -  00:00.00
ND -  00:00.00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 120, 144 )
scale = Vector2( 3, 3 )
frames = SubResource( 6 )
frame = 2
speed_scale = 2.0

[connection signal="input_event" from="TouchScreen" to="." method="_on_TouchScreen_input_event"]
[connection signal="input_event" from="TouchScreen" to="TouchScreen" method="_on_TouchScreen_input_event"]
[connection signal="pressed" from="Label_Timer/Button_Discard" to="." method="_on_Button_Discard_pressed"]
